--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -16,6 +16,15 @@ $color6:rgb(75, 83, 78);
 
 .mobileBouton {
     border: none;
+    padding: 2px 8px;
+    border-radius: 200px;
+    font-size: 10px;
+
+    cursor: pointer;
+}
+
+.mobileBouton {
+    border: none;
     padding: 5px 10px;
     border-radius: 200px;
     font-size: 10px;
