--- a/src/assets/style/GaleriePage.scss
+++ b/src/assets/style/GaleriePage.scss
@@ -1,8 +1,7 @@
 @import './variables.scss';
 
-
 #galerieMain {
-    padding-top: 100px;
+    padding-top: 130px;
     text-align: center;
     margin: 0 auto;
     min-height: 100vh;
@@ -12,21 +11,38 @@
     color: $color4;
 
     #container-gallery {
-    
-        h1 {
-            margin-bottom: 20px;
-        }
+        position: relative;
 
-        
+
+        .errorMessage {
+            position: absolute;
+            top: 40%;
+            font-size: 20px;
+            transform: translateX(-50%);
+            width: 600px;
+        }
 
         div {
             text-align: center;
-            
-            h4{
-             margin-top: 20px;
-                grid-area: 1 / 2 / 2 / 3; 
-             
+
+
+
+            h2 {
+                font-size: 30px;
+                margin-bottom: 10px;
             }
+
+            p {
+                margin-bottom: 30px;
+                font-size: 25px;
+            }
+
+            h4 {
+                font-size: 20px;
+                margin-top: 20px;
+                grid-area: 1 / 2 / 2 / 3;
+            }
+
             .images-container {
                 max-width: 1200px;
                 display: grid;
@@ -42,15 +58,102 @@
                 height: 100%;
                 object-fit: cover;
                 transition: transform 0.6s ease-in-out;
-
             }
 
             .images-container img:hover {
                 transform: scale(1.2);
-
             }
         }
     }
+}
 
+// Media queries pour les tablettes
+@media screen and (max-width: 768px) {
+    #galerieMain {
+        padding-top: 130px;
+        text-align: center;
+        margin: 0 auto;
+        min-height: 100vh;
+        background-color: $color3;
+        justify-content: center;
+        color: $color4;
 
+        #container-gallery {
+            div {
+                text-align: center;
+
+                h2 {
+                    font-size: 25px;
+                    margin-bottom: 10px;
+                }
+
+                p {
+                    margin-bottom: 10px;
+                    font-size: 18px;
+                }
+
+                .images-container {
+                    display: grid;
+                    grid-template-columns: repeat(2, 1fr);
+                    grid-auto-rows: 200px;
+                    gap: 15px;
+                    margin-bottom: 50px;
+                }
+
+                h4 {
+                    margin-top: 20px;
+                    grid-area: 1 / 1/ 2 / 3;
+                }
+
+                .images-container img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
+    }
+}
+
+// Media queries pour les mobiles
+@media screen and (max-width: 480px) {
+    #galerieMain {
+        padding-top: 130px;
+        text-align: center;
+        margin: 0 auto;
+        min-height: 100vh;
+        background-color: $color3;
+        justify-content: center;
+        color: $color4;
+
+        #container-gallery {
+            div {
+                text-align: center;
+
+                h2 {
+                    font-size: 20px;
+                    margin-bottom: 10px;
+                }
+
+                p {
+                    margin-bottom: 10px;
+                    font-size: 16px;
+                }
+
+                .images-container {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 20px;
+                    margin-bottom: 100px;
+                }
+
+                .images-container img {
+                    width: 90%;
+                    height: 200px;
+                    object-fit: cover;
+                }
+            }
+        }
+    }
 }
