--- a/src/assets/style/Parcours.scss
+++ b/src/assets/style/Parcours.scss
@@ -1,3 +1,217 @@
-#parcours-main{
+@import './variables.scss';
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Roboto', Arial, sans-serif;
+    background-color: $color2;
+    color: $color1;
+}
+
+#parcours-main {
     min-height: 90vh;
+    padding: 20px;
+
+
+    .profile-section {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 20px;
+        margin-top: 100px;
+        height: 400px;
+        background-color: $color4;
+       
+        padding: 10px;
+
+
+        .profile-image {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            margin-right: 60px;
+            border: 5px solid $color3;
+        }
+
+        .profile-text {
+            max-width: 800px;
+
+
+            p {
+                font-size: 19px;
+                margin-bottom: 15px;
+            }
+        }
+    }
+
+    .diplomes-section {
+        margin-top: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: $color4;
+        border-radius: 20px;
+        padding: 20px;
+
+        h3 {
+            margin-bottom: 30px;
+            color: $color1;
+            font-size: 23px;
+        }
+
+        ul {
+            list-style-type: none;
+            margin-bottom: 30px;
+            padding: 0;
+
+            strong {
+                display: block;
+                margin-bottom: 10px;
+                color: $color3;
+                text-decoration: underline;
+            }
+
+            li {
+                margin-bottom: 10px;
+                font-size: 19px;
+
+                ul {
+                    padding-left: 20px;
+                }
+            }
+        }
+
+        .diplomes-images {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            width: 50%;
+
+            height: 300px;
+
+
+
+            .diplome-image {
+                height: 200px;
+                width: 200px;
+                border: 3px solid $color3;
+                border-radius: 10px;
+            }
+        }
+    }
+}
+
+// Media Queries for Tablet
+@media screen and (max-width: 768px) {
+    #parcours-main {
+        .profile-section {
+            height: 400px;
+            margin-top: 90px;
+            padding: 10px;
+
+            .profile-image {
+                margin-right: 30px;
+            }
+
+            .profile-text {
+                p {
+                    font-size: 16px;
+                }
+            }
+        }
+
+        .diplomes-section {
+            h3 {
+                font-size: 20px;
+                margin-bottom: 20px;
+            }
+
+            ul {
+                strong {
+                    font-size: 18px;
+                }
+
+                li {
+                    font-size: 16px;
+                }
+            }
+
+            .diplomes-images {
+                width: 100%;
+                // img {
+
+                //     // background-color: aqua;
+                // }
+
+            }
+        }
+    }
+}
+
+// Media Queries for Mobile
+@media screen and (max-width: 480px) {
+    #parcours-main {
+        .profile-section {
+            flex-direction: column;
+            align-items: center;
+            height: auto;
+            margin-top: 70px;
+            padding: 10px;
+
+            .profile-image {
+                margin-right: 0;
+                height: 150px;
+                width: 150px;
+                margin-bottom: 20px;
+                border: solid 1px;
+            }
+
+            .profile-text {
+                text-align: center;
+                max-width: 100%;
+
+                p {
+                    font-size: 14px;
+                    margin-bottom: 10px;
+                }
+            }
+        }
+
+        .diplomes-section {
+            h3 {
+                font-size: 18px;
+                margin-bottom: 15px;
+            }
+
+            ul {
+                strong {
+                    font-size: 16px;
+                }
+
+                li {
+                    font-size: 14px;
+                }
+
+                margin: 0;
+            }
+
+            .diplomes-images {
+                height: 200px;
+                width: 100%;
+                align-items: center;
+                margin: 0;
+               
+
+                .diplome-image {
+                    width: 100px;
+                    height: 100px;
+                    background-color: black;
+                }
+
+            }
+        }
+    }
 }
