--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -32,11 +32,11 @@ $color6:rgb(75, 83, 78);
     cursor: pointer;
 }
 
-body {
-    font-family: 'Arial', sans-serif;
-
+header body footer{
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    
 }
+
+
 
